# hobbyroom

./: .gitignore  Dockerfile  alembic.ini  docker-compose.local.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 02d7cc38fb31_create_gathering_and_affiliation_tables.py  4f608e31a82f_apply_custom_pk_to_affiliation.py  566ef4f0e418_remove_affiliation_id.py  83de80fedb63_create_user_and_persona_tables.py
hobbyroom/: auth.py  constants.py  container.py  depends.py  exceptions.py  settings.py
hobbyroom/app/: main.py
hobbyroom/auth/: __init__.py  command.py  dependency.py  depends.py  entrypoint.py  schema.py
hobbyroom/auth/adapter/: repository.py  unit_of_work.py
hobbyroom/auth/domain/: __init__.py  vo.py
hobbyroom/auth/service/: __init__.py  command_handler.py  jwt_handler.py
hobbyroom/database/: __init__.py  connection.py  model.py  repository.py  unit_of_work.py
hobbyroom/gathering/: command.py  dependency.py  entrypoint.py
hobbyroom/gathering/adapter/: repository.py  unit_of_work.py
hobbyroom/gathering/domain/: __init__.py  model.py  vo.py
hobbyroom/gathering/service/: command_handler.py
hobbyroom/user/: __init__.py  command.py  dependency.py  entrypoint.py
hobbyroom/user/adapter/: __init__.py  repository.py  unit_of_work.py
hobbyroom/user/domain/: model.py  vo.py
hobbyroom/user/schema/: response.py
hobbyroom/user/service/: __init__.py  command_handler.py  issuer.py  jwt_handler.py
